[gd_scene load_steps=32 format=2]

[ext_resource path="res://assets/graphics/ui/suanpan_5-0.png" type="Texture" id=1]
[ext_resource path="res://assets/graphics/ui/suanpan.png" type="Texture" id=2]
[ext_resource path="res://assets/graphics/ui/suanpan_4-0.png" type="Texture" id=3]
[ext_resource path="res://stages/Timeleft.gd" type="Script" id=4]
[ext_resource path="res://stages/game_checkout/digit1.gd" type="Script" id=5]
[ext_resource path="res://stages/game_checkout/Checkout.gd" type="Script" id=6]
[ext_resource path="res://stages/game_checkout/digit4.gd" type="Script" id=7]
[ext_resource path="res://stages/game_checkout/digit5.gd" type="Script" id=8]
[ext_resource path="res://stages/game_checkout/digit7.gd" type="Script" id=9]
[ext_resource path="res://stages/game_checkout/digit2.gd" type="Script" id=10]
[ext_resource path="res://stages/game_checkout/digit10.gd" type="Script" id=11]
[ext_resource path="res://stages/game_checkout/digit12.gd" type="Script" id=12]
[ext_resource path="res://stages/game_checkout/digit13.gd" type="Script" id=13]
[ext_resource path="res://stages/game_checkout/digit6.gd" type="Script" id=14]
[ext_resource path="res://stages/game_checkout/digit11.gd" type="Script" id=15]
[ext_resource path="res://stages/game_checkout/digit9.gd" type="Script" id=16]
[ext_resource path="res://stages/game_checkout/digit8.gd" type="Script" id=17]
[ext_resource path="res://stages/game_checkout/digit3.gd" type="Script" id=18]
[ext_resource path="res://assets/fonts/SourceHanSansCN-Normal.otf" type="DynamicFontData" id=19]


[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 19 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.181152, 0.209061, 0.828125, 1 )
border_width_top = 1

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.392157, 0.403922, 0.407843, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=10]
size = 24
font_data = ExtResource( 19 )

[sub_resource type="Theme" id=11]
default_font = SubResource( 10 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 19 )

[node name="Checkout" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Check" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -71.7534
margin_top = -120.386
margin_right = 122.247
margin_bottom = -55.3861
custom_fonts/font = SubResource( 1 )
text = "结账"

[node name="Bill" type="RichTextLabel" parent="Panel"]
margin_left = 29.0
margin_top = 81.0
margin_right = 271.0
margin_bottom = 559.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "账单
"
text = "账单
"

[node name="Help" type="RichTextLabel" parent="Panel"]
margin_left = 1021.0
margin_top = 93.0
margin_right = 1263.0
margin_bottom = 551.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "提示
限定时间内，计算数字游戏
通过观察顾客的反应，来判断算大了，还是算小了。
虽然饭菜的价格是统一的，但如果给顾客点优惠,则顾客老板都会满意.
时间结束后,给出老板对你的评价结果，评分降到0直接游戏结束。
注意 算大，顾客会不高兴，反馈老板，扣4评分。
算小，给顾客打折，顾客会高兴，折扣打在9折内，老板满意，评分加4. 折扣太多，老板不高兴，评分减1。
算出正好的价钱，顾客老板都满意，评分加2."
text = "提示
限定时间内，计算数字游戏
通过观察顾客的反应，来判断算大了，还是算小了。
虽然饭菜的价格是统一的，但如果给顾客点优惠,则顾客老板都会满意.
时间结束后,给出老板对你的评价结果，评分降到0直接游戏结束。
注意 算大，顾客会不高兴，反馈老板，扣4评分。
算小，给顾客打折，顾客会高兴，折扣打在9折内，老板满意，评分加4. 折扣太多，老板不高兴，评分减1。
算出正好的价钱，顾客老板都满意，评分加2."

[node name="Response" type="RichTextLabel" parent="Panel"]
margin_left = 289.0
margin_top = 57.4991
margin_right = 993.0
margin_bottom = 109.499
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true

[node name="title" type="Label" parent="Panel"]
anchor_right = 1.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "柜台"
align = 1
valign = 1

[node name="Timeleft" type="ProgressBar" parent="Panel"]
margin_left = 286.0
margin_top = 38.0
margin_right = 995.0
margin_bottom = 52.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
max_value = 1000.0
step = 1.0
value = 1000.0
percent_visible = false
script = ExtResource( 4 )

[node name="Point" type="Label" parent="Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -193.776
margin_top = 25.1534
margin_right = -95.7764
margin_bottom = 50.1534
custom_fonts/font = SubResource( 6 )
text = "评分：50"

[node name="Sumvalue" type="Label" parent="Panel"]
margin_left = 850.141
margin_top = 610.474
margin_right = 890.141
margin_bottom = 624.474
custom_fonts/font = SubResource( 7 )
text = "货品总价："

[node name="Sumdigit" type="Label" parent="Panel"]
margin_left = 850.141
margin_top = 643.635
margin_right = 970.141
margin_bottom = 668.635
custom_fonts/font = SubResource( 7 )
text = "计算总账："

[node name="Nickname" type="Label" parent="Panel"]
margin_left = 1024.0
margin_top = 54.0
margin_right = 1275.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 8 )
align = 1

[node name="Suanpan" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="Sprite" type="TextureRect" parent="Suanpan"]
margin_left = -363.687
margin_top = -213.244
margin_right = 363.313
margin_bottom = 212.756
texture = ExtResource( 2 )

[node name="digit1" type="Node" parent="Suanpan"]
script = ExtResource( 5 )

[node name="TextureButton5" type="TextureButton" parent="Suanpan/digit1"]
margin_left = 915.612
margin_top = 214.6
margin_right = 964.612
margin_bottom = 275.6
texture_normal = ExtResource( 1 )

[node name="TextureButton4" type="TextureButton" parent="Suanpan/digit1"]
margin_left = 914.748
margin_top = 298.983
margin_right = 966.748
margin_bottom = 538.983
button_mask = 3
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="Suanpan/digit1"]
margin_left = 924.515
margin_top = 113.0
margin_right = 942.515
margin_bottom = 132.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 9 )
text = "〇"

[node name="digit2" type="Node" parent="Suanpan"]
script = ExtResource( 10 )

[node name="TextureButton5" type="TextureButton" parent="Suanpan/digit2"]
margin_left = 866.861
margin_top = 214.779
margin_right = 915.861
margin_bottom = 275.779
texture_normal = ExtResource( 1 )

[node name="TextureButton4" type="TextureButton" parent="Suanpan/digit2"]
margin_left = 865.997
margin_top = 299.162
margin_right = 917.997
margin_bottom = 539.162
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="Suanpan/digit2"]
margin_left = 875.764
margin_top = 113.179
margin_right = 893.764
margin_bottom = 132.179
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 9 )
text = "〇"

[node name="digit3" type="Node" parent="Suanpan"]
script = ExtResource( 18 )

[node name="TextureButton5" type="TextureButton" parent="Suanpan/digit3"]
margin_left = 816.335
margin_top = 213.15
margin_right = 865.335
margin_bottom = 274.15
texture_normal = ExtResource( 1 )

[node name="TextureButton4" type="TextureButton" parent="Suanpan/digit3"]
margin_left = 815.471
margin_top = 297.533
margin_right = 867.471
margin_bottom = 537.533
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="Suanpan/digit3"]
margin_left = 825.238
margin_top = 111.55
margin_right = 843.238
margin_bottom = 130.55
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 9 )
text = "〇"

[node name="digit4" type="Node" parent="Suanpan"]
script = ExtResource( 7 )

[node name="TextureButton5" type="TextureButton" parent="Suanpan/digit4"]
margin_left = 765.933
margin_top = 213.15
margin_right = 814.933
margin_bottom = 274.15
texture_normal = ExtResource( 1 )

[node name="TextureButton4" type="TextureButton" parent="Suanpan/digit4"]
margin_left = 765.069
margin_top = 297.533
margin_right = 817.069
margin_bottom = 537.533
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="Suanpan/digit4"]
margin_left = 774.836
margin_top = 111.55
margin_right = 792.836
margin_bottom = 130.55
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 9 )
text = "〇"

[node name="digit5" type="Node" parent="Suanpan"]
script = ExtResource( 8 )

[node name="TextureButton5" type="TextureButton" parent="Suanpan/digit5"]
margin_left = 716.946
margin_top = 214.316
margin_right = 765.946
margin_bottom = 275.316
texture_normal = ExtResource( 1 )

[node name="TextureButton4" type="TextureButton" parent="Suanpan/digit5"]
margin_left = 716.082
margin_top = 298.7
margin_right = 768.082
margin_bottom = 538.7
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="Suanpan/digit5"]
margin_left = 725.849
margin_top = 112.716
margin_right = 743.849
margin_bottom = 131.716
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 9 )
text = "〇"

[node name="digit6" type="Node" parent="Suanpan"]
script = ExtResource( 14 )

[node name="TextureButton5" type="TextureButton" parent="Suanpan/digit6"]
margin_left = 666.793
margin_top = 214.316
margin_right = 715.793
margin_bottom = 275.316
texture_normal = ExtResource( 1 )

[node name="TextureButton4" type="TextureButton" parent="Suanpan/digit6"]
margin_left = 665.929
margin_top = 298.7
margin_right = 717.929
margin_bottom = 538.7
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="Suanpan/digit6"]
margin_left = 675.696
margin_top = 112.716
margin_right = 693.696
margin_bottom = 131.716
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 9 )
text = "〇"

[node name="digit7" type="Node" parent="Suanpan"]
script = ExtResource( 9 )

[node name="TextureButton5" type="TextureButton" parent="Suanpan/digit7"]
margin_left = 618.663
margin_top = 214.316
margin_right = 667.663
margin_bottom = 275.316
texture_normal = ExtResource( 1 )

[node name="TextureButton4" type="TextureButton" parent="Suanpan/digit7"]
margin_left = 617.799
margin_top = 298.7
margin_right = 669.799
margin_bottom = 538.7
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="Suanpan/digit7"]
margin_left = 627.566
margin_top = 112.716
margin_right = 645.566
margin_bottom = 131.716
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 9 )
text = "〇"

[node name="digit8" type="Node" parent="Suanpan"]
script = ExtResource( 17 )

[node name="TextureButton5" type="TextureButton" parent="Suanpan/digit8"]
margin_left = 567.021
margin_top = 214.865
margin_right = 616.021
margin_bottom = 275.865
texture_normal = ExtResource( 1 )

[node name="TextureButton4" type="TextureButton" parent="Suanpan/digit8"]
margin_left = 566.158
margin_top = 299.248
margin_right = 618.158
margin_bottom = 539.248
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="Suanpan/digit8"]
margin_left = 575.924
margin_top = 113.265
margin_right = 593.924
margin_bottom = 132.265
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 9 )
text = "〇"

[node name="digit9" type="Node" parent="Suanpan"]
script = ExtResource( 16 )

[node name="TextureButton5" type="TextureButton" parent="Suanpan/digit9"]
margin_left = 516.436
margin_top = 214.865
margin_right = 565.436
margin_bottom = 275.865
texture_normal = ExtResource( 1 )

[node name="TextureButton4" type="TextureButton" parent="Suanpan/digit9"]
margin_left = 515.572
margin_top = 299.248
margin_right = 567.572
margin_bottom = 539.248
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="Suanpan/digit9"]
margin_left = 525.339
margin_top = 113.265
margin_right = 543.339
margin_bottom = 132.265
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 9 )
text = "〇"

[node name="digit10" type="Node" parent="Suanpan"]
script = ExtResource( 11 )

[node name="TextureButton5" type="TextureButton" parent="Suanpan/digit10"]
margin_left = 466.708
margin_top = 214.865
margin_right = 515.708
margin_bottom = 275.865
texture_normal = ExtResource( 1 )

[node name="TextureButton4" type="TextureButton" parent="Suanpan/digit10"]
margin_left = 465.845
margin_top = 299.248
margin_right = 517.845
margin_bottom = 539.248
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="Suanpan/digit10"]
margin_left = 475.611
margin_top = 113.265
margin_right = 493.611
margin_bottom = 132.265
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 9 )
text = "〇"

[node name="digit11" type="Node" parent="Suanpan"]
script = ExtResource( 15 )

[node name="TextureButton5" type="TextureButton" parent="Suanpan/digit11"]
margin_left = 417.838
margin_top = 214.865
margin_right = 466.838
margin_bottom = 275.865
texture_normal = ExtResource( 1 )

[node name="TextureButton4" type="TextureButton" parent="Suanpan/digit11"]
margin_left = 416.974
margin_top = 299.248
margin_right = 468.974
margin_bottom = 539.248
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="Suanpan/digit11"]
margin_left = 426.741
margin_top = 113.265
margin_right = 444.741
margin_bottom = 132.265
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 9 )
text = "〇"

[node name="digit12" type="Node" parent="Suanpan"]
script = ExtResource( 12 )

[node name="TextureButton5" type="TextureButton" parent="Suanpan/digit12"]
margin_left = 368.832
margin_top = 214.052
margin_right = 417.832
margin_bottom = 275.052
texture_normal = ExtResource( 1 )

[node name="TextureButton4" type="TextureButton" parent="Suanpan/digit12"]
margin_left = 367.968
margin_top = 298.436
margin_right = 419.968
margin_bottom = 538.436
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="Suanpan/digit12"]
margin_left = 377.735
margin_top = 112.453
margin_right = 395.735
margin_bottom = 131.453
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 9 )
text = "〇"

[node name="digit13" type="Node" parent="Suanpan"]
script = ExtResource( 13 )

[node name="TextureButton5" type="TextureButton" parent="Suanpan/digit13"]
margin_left = 317.954
margin_top = 214.779
margin_right = 366.954
margin_bottom = 275.779
texture_normal = ExtResource( 1 )

[node name="TextureButton4" type="TextureButton" parent="Suanpan/digit13"]
margin_left = 317.09
margin_top = 299.162
margin_right = 369.09
margin_bottom = 539.162
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="Suanpan/digit13"]
margin_left = 326.857
margin_top = 113.179
margin_right = 344.857
margin_bottom = 132.179
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 9 )
text = "〇"

[node name="GameOver" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 400, 400 )
theme = SubResource( 11 )
window_title = "你被炒！"
dialog_text = "算错太多次了。 你被炒鱿鱼了。"

[node name="TimeOver" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 400, 400 )
theme = SubResource( 11 )
window_title = "时间到!"

[node name="Button" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -146.413
margin_top = -106.0
margin_right = -22.4133
margin_bottom = -30.0
custom_fonts/font = SubResource( 12 )
text = "返回大厅"

[connection signal="pressed" from="Panel/Check" to="." method="_on_Check_pressed"]
[connection signal="time_out" from="Panel/Timeleft" to="." method="_on_Timeleft_time_out"]
[connection signal="pressed" from="Suanpan/digit1/TextureButton5" to="Suanpan/digit1" method="_on_TextureButton50_pressed"]
[connection signal="pressed" from="Suanpan/digit1/TextureButton4" to="Suanpan/digit1" method="_on_TextureButton14_pressed"]
[connection signal="pressed" from="Suanpan/digit2/TextureButton5" to="Suanpan/digit2" method="_on_TextureButton50_pressed"]
[connection signal="pressed" from="Suanpan/digit2/TextureButton4" to="Suanpan/digit2" method="_on_TextureButton14_pressed"]
[connection signal="pressed" from="Suanpan/digit3/TextureButton5" to="Suanpan/digit3" method="_on_TextureButton50_pressed"]
[connection signal="pressed" from="Suanpan/digit3/TextureButton4" to="Suanpan/digit3" method="_on_TextureButton14_pressed"]
[connection signal="pressed" from="Suanpan/digit4/TextureButton5" to="Suanpan/digit4" method="_on_TextureButton50_pressed"]
[connection signal="pressed" from="Suanpan/digit4/TextureButton4" to="Suanpan/digit4" method="_on_TextureButton14_pressed"]
[connection signal="pressed" from="Suanpan/digit5/TextureButton5" to="Suanpan/digit5" method="_on_TextureButton50_pressed"]
[connection signal="pressed" from="Suanpan/digit5/TextureButton4" to="Suanpan/digit5" method="_on_TextureButton14_pressed"]
[connection signal="pressed" from="Suanpan/digit6/TextureButton5" to="Suanpan/digit6" method="_on_TextureButton50_pressed"]
[connection signal="pressed" from="Suanpan/digit6/TextureButton4" to="Suanpan/digit6" method="_on_TextureButton14_pressed"]
[connection signal="pressed" from="Suanpan/digit7/TextureButton5" to="Suanpan/digit7" method="_on_TextureButton50_pressed"]
[connection signal="pressed" from="Suanpan/digit7/TextureButton4" to="Suanpan/digit7" method="_on_TextureButton14_pressed"]
[connection signal="pressed" from="Suanpan/digit8/TextureButton5" to="Suanpan/digit8" method="_on_TextureButton50_pressed"]
[connection signal="pressed" from="Suanpan/digit8/TextureButton4" to="Suanpan/digit8" method="_on_TextureButton14_pressed"]
[connection signal="pressed" from="Suanpan/digit9/TextureButton5" to="Suanpan/digit9" method="_on_TextureButton50_pressed"]
[connection signal="pressed" from="Suanpan/digit9/TextureButton4" to="Suanpan/digit9" method="_on_TextureButton14_pressed"]
[connection signal="pressed" from="Suanpan/digit10/TextureButton5" to="Suanpan/digit10" method="_on_TextureButton50_pressed"]
[connection signal="pressed" from="Suanpan/digit10/TextureButton4" to="Suanpan/digit10" method="_on_TextureButton14_pressed"]
[connection signal="pressed" from="Suanpan/digit11/TextureButton5" to="Suanpan/digit11" method="_on_TextureButton50_pressed"]
[connection signal="pressed" from="Suanpan/digit11/TextureButton4" to="Suanpan/digit11" method="_on_TextureButton14_pressed"]
[connection signal="pressed" from="Suanpan/digit12/TextureButton5" to="Suanpan/digit12" method="_on_TextureButton50_pressed"]
[connection signal="pressed" from="Suanpan/digit12/TextureButton4" to="Suanpan/digit12" method="_on_TextureButton14_pressed"]
[connection signal="pressed" from="Suanpan/digit13/TextureButton5" to="Suanpan/digit13" method="_on_TextureButton50_pressed"]
[connection signal="pressed" from="Suanpan/digit13/TextureButton4" to="Suanpan/digit13" method="_on_TextureButton14_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
